src/test/deca/context/invalid/created/test-a-4.deca
class A{
    int z;
    int b;
    float a;
    int Mult(int x){
        return a*b*z*x;
    }
}